--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-img" src="/Users/aryan/Desktop/web development 7.25.47 PM/HTML -  Personal website/Css - My Site/images/circle-cropped.png" alt="aryan's profile" >
-      <h2>Hello.</h2>
+      <img class="profile-img" src="images/circle-cropped.png" alt="aryan's profile" >
+      <h2>Hello.</h2>"/U
       <p class="intro"> I am an web developer . I am interested in designing a websites. And I am a <em class="eng">Computer Science Engineer</em></p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="design-img" src="/Users/aryan/Desktop/web development 7.25.47 PM/HTML -  Personal website/Css - My Site/images/graphic-designer.png" alt="My Skills" >
+        <img class="design-img" src="images/graphic-designer.png" alt="My Skills" >
         <h3>Design & Development </h3>
         <p>I Started a Web Designing After The Class 12th. I Taking Interested In Development and Designing After The School Life .</p>
       </div>
       <div class="skill-row">
-        <img class="code-img" src="/Users/aryan/Desktop/web development 7.25.47 PM/HTML -  Personal website/Css - My Site/images/code.png" alt="Programmer" >
+        <img class="code-img" src="images/code.png" alt="Programmer" >
         <h3>Programming & Coding</h3>
         <p>I Like Programming and Coding And I am Excited When I am Doing Programming. </p>
       </div>
