--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="middle-container">
     <div class="profile">
       <img class="profile-img" src="images/circle-cropped.png" alt="aryan's profile" >
-      <h2>Hello.</h2>"/U
+      <h2>Hello.</h2>
       <p class="intro"> I am an web developer . I am interested in designing a websites. And I am a <em class="eng">Computer Science Engineer</em></p>
     </div>
     <hr>
